Added an example

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 		<div class="input-container column column--small">
 			Enter or paste a DNA sequence:
 			<textarea></textarea>
-			<div class="button">plot</div>
+			<div class="button button--plot">plot</div>
+			<div class="button button--example">example</div>
+			<p class="info hidden">
+				The example sequence was taken from the CpG-rich region around the transcription start site of the <em>MGMT</em> gene.
+			</p>
 		</div>
 		<div class="svg-container column column--wide"></div>
 	</main>
