Added link to GitHub repo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<footer>
 		<p><strong>Created by Alexander Koch</strong></p>
 		<p>Twitter: <a href="https://twitter.com/monsieurKoch" target="_blank">@monsieurkoch</a>, e-mail: <a href="mailto:a.koch@maastrichtuniversity.nl" target="_blank">a.koch@maastrichtuniversity.nl</a></p>
-		<p>Source code is available on <a href="#" target="_blank">GitHub</a></p>
+		<p>Source code is available on <a href="https://github.com/akoch8/struqture" target="_blank">GitHub</a></p>
 	</footer>
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/d3.min.js"></script>
