--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="STRUQTURE - Visualize the overall structure of a DNA sequence">
 	<title>S T R U Q T U R E</title>
 	<link href="https://fonts.googleapis.com/css?family=Rajdhani:300,600" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
