Return to nucleotide sequences + addition of frequencies bar plot.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 			<p class="info hidden">
 				The example sequence was taken from the CpG-rich region around the transcription start site of the <em>MGMT</em> gene.
 			</p>
+			<div id="sequence-statistics">
+				<div id="nucleotide-frequencies" class="frequencies">
+					<ul></ul>
+				</div>
+			</div>
 		</div>
 		<div class="svg-container column column--wide"></div>
 	</main>
