Minor changes to website copy.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			Stru<span class="focus-color">q</span>ture
 		</h1>
 		<h2>
-			Visualize the overall structure of a DNA sequence
+			Visualize the overall structure and composition of a DNA sequence
 		</h2>
 	</header>
 	<main>
