--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 			Stru<span class="focus-color">q</span>ture
 		</h1>
 		<h2>
-			Visualize the overall structure and composition of a DNA sequence
+			Visualize the overall structure and composition of a nucleotide sequence
 		</h2>
 	</header>
 	<main>
 		<div class="input-container column column--small">
-			Enter or paste a DNA sequence:
+			Enter or paste a nucleotide sequence:
 			<textarea></textarea>
 			<div class="button button--plot">plot</div>
 			<div class="button button--example">example</div>
@@ -41,7 +41,7 @@
 	</main>
 	<hr>
 	<footer>
-		<p><strong>Created by Alexander Koch</strong></p>
+		<p><strong>Created by <a href="https://alexanderkoch.be">Alexander Koch</a></strong></p>
 		<p>Twitter: <a href="https://twitter.com/monsieurKoch" target="_blank">@monsieurkoch</a>, e-mail: <a href="mailto:a.koch@maastrichtuniversity.nl" target="_blank">a.koch@maastrichtuniversity.nl</a></p>
 		<p>Source code is available on <a href="https://github.com/akoch8/struqture" target="_blank">GitHub</a></p>
 	</footer>
