--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<hr>
 	<footer>
 		<p><strong>Created by <a href="https://alexanderkoch.be">Alexander Koch</a></strong></p>
-		<p>Twitter: <a href="https://twitter.com/monsieurKoch" target="_blank">@monsieurkoch</a>, e-mail: <a href="mailto:a.koch@maastrichtuniversity.nl" target="_blank">a.koch@maastrichtuniversity.nl</a></p>
+		<p>Twitter: <a href="https://twitter.com/monsieurKoch" target="_blank">@monsieurkoch</a>, e-mail: <a href="mailto:alexander_koch86@hotmail.com" target="_blank">alexander_koch86@hotmail.com</a></p>
 		<p>Source code is available on <a href="https://github.com/akoch8/struqture" target="_blank">GitHub</a></p>
 	</footer>
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
